--- a/src/style.css
+++ b/src/style.css
@@ -9,34 +9,41 @@
 
 *{
     box-sizing: border-box;
+    margin: 0;
 }
-.contenedor{
-margin: 0;
+.contenedorHeader {
+    width: 50%;
+    outline: 1px outline limegreen;
 }
 body {
     background-color: var(--background);
     margin: 0%;
 }
 
+.contenedor 
+
 header {
     background-color: #38B4D8;
     align-items: initial;
     padding: 1%;
+    width: 100%;
 }
 
 h1 {
     font-family: var(--font-two);
     color: var(--font-color-one);
-    font-size: 250%;
+    font-size: 3vw;
     margin: 0;
-    padding-left: 15%;
+    padding-left: 27%;
+    max-width: 100%;
 }
 
 h2 {
     font-family: var(--font-one);
     color: var(--background);
-    font-size: 160%;
+    font-size: 1.5vw;
     margin: 0;
+    max-width: 100%;
 
 }
 
@@ -47,12 +54,18 @@ h2 {
     margin: 0;
     padding-left: 20%;
 
+
 }
 
-img {
-    width: 15%;
-    margin: 0;
+.cnLogo {
+    max-width: 10vw;
+    height: auto;
+    margin-left: 0.3vw;
 
+}
+
+.logo {
+    width: 15%;
 }
 
 .alert-tutorial, h4 {
@@ -61,7 +74,7 @@ img {
     font-family: var(--font-one);
     color: var(--font-color-one);
     padding-left: 55%;
-    font-size: 110%;
+    font-size: 1.5vw;
     padding-top: 0.3%;
     padding-bottom: 0.3%;
 }
@@ -72,21 +85,27 @@ img {
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
     justify-content: space-around;*/
-    outline: 1px solid limegreen; 
     justify-items: center;
-    margin-left: 20%;
+    padding-left: 30vw;
+    /*margin-left: 20%;*/
+    margin-top: 2vw;
+
 }
 
 .cards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 7px;
+    gap: 1vw;
     justify-content: space-around; 
     /*justify-items: center;*/
-    width: 80%;
+    width: 40vw;
 }
 
 .cards img {
     width: 100%;
     justify-content: center;
+    border: 0.4vw solid #211921;
+    filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 10px;
+    
 }
