--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
 header {
     background-color: #38B4D8;
     align-items: initial;
-    padding: 1%;
+    /*padding: 1%;*/
     width: 100%;
 }
 
@@ -109,16 +109,16 @@ h2 {
 @media only screen and (max-width: 600px) {
     .cardsImg {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 1vw;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 5vw;
         justify-content: space-around; 
-        width: 70vw;
+        width: 80vw;
         }
 
     #root {
         justify-items: center;
-        padding-left: 15vw;
-        margin-top: 15vw;
+        padding-left: 10vw;
+        margin-top: 14vw;
         }
 
         .cards img {
@@ -131,7 +131,7 @@ h2 {
 
         .contenedorHeader {
             width: 100%;
-            margin-top: 5vw;
+            padding-top: 5vw;
         }
 
         h1 {
@@ -181,16 +181,158 @@ h2 {
         }
 }
 @media only screen and (min-width: 600px) {
+    .cardsImg {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 5vw;
+        justify-content: space-around; 
+        width: 75vw;
+        }
+
     #root {
         justify-items: center;
-        padding-left: 30vw;
-        margin-top: 2vw;
-    }
+        padding-left: 13vw;
+        margin-top: 5vw;
+        margin-bottom: 5vw;
+        }
+
+        .cards img {
+            width: 100%;
+            justify-content: center;
+            border: 1vw solid #211921;
+            filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.25));
+            border-radius: 10px;
+        }
+
+        .contenedorHeader {
+            width: 100%;
+            padding-top: 5vw;
+        }
+
+        h1 {
+            font-size: 7vw;
+            padding-left: 17%;
+        }
+
+        h2 {
+            font-size: 5vw;
+        }
+        .subtitle{
+            padding: 0;
+        }
+
+        .logo {
+            width: 20%;
+        }
+
+        .cnLogo {
+            max-width: 18vw;
+            height: auto;
+            margin-left: 0.3vw;
+        
+        }
+        header {
+            height: 25vw;
+
+        }
+        .menuBar, h4 {
+            margin: 0;
+           padding-left: 0;
+            font-size: 3.5vw;
+            padding-top: 0.3%;
+            padding-bottom: 0.3%;
+            gap: 3px;
+        }
+        .menuBar{
+            padding-left: 17%;  
+        }
+
+        .tutorial {
+            margin-left: 10vw;
+        }
+
+        .playAgain {
+            margin-left: 5vw;
+        }
 }
 @media only screen and (min-width: 992px) {
+    .cardsImg {     
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1vw;
+        justify-content: space-around; 
+        width: 40vw;
+        }
+
     #root {
         justify-items: center;
         padding-left: 30vw;
         margin-top: 2vw;
-    }   
+        margin-bottom: 0;
+        }
+
+    .cards img {
+        width: 100%;
+        justify-content: center;
+        border: 0.4vw solid #211921;
+        filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.25));
+        border-radius: 10px;    
+        }
+
+    .contenedorHeader {
+        width: 100%;
+        margin-top: 1vw;
+        padding-top: 0;
+        
+        }
+
+    h1 {
+        font-size: 3vw;
+        margin: 0;
+        padding-left: 23%;
+        }
+
+    h2 {
+        font-size: 2vw;
+        margin: 0;
+        }
+    .subtitle{
+        margin-right: 25vw;
+        padding-left: 0%;
+        }
+
+    .logo {
+        width: 15%;
+        }
+
+    .cnLogo {
+        max-width: 10vw;
+        height: auto;
+        margin-left: 0.3vw;
+    
+    }
+    header {
+        padding: 0.2%;
+        height: 10vw;
+
+    }
+    .menuBar, h4 {
+        margin: 0;
+        padding-left: 0;
+        font-size: 1.2vw;
+        padding-top: 0.3%;
+        padding-bottom: 0.3%;
+        gap: 3px;
+    }
+    .menuBar{
+        padding-left: 55%;  
+        }
+
+    .tutorial {
+        margin-left: 3vw;
+        }
+
+    .playAgain {
+        margin-left: 5vw;
+        }
 }
